major refactor 2